# ai_inference_exercise

./: .gitignore  .gitmodules  README.md
docker/: Dockerfile  docker-compose.yml  requirements.txt  restart.sh
my_ai_inference_exercise/: CMakeLists.txt
my_ai_inference_exercise/examples/imagedetect_yolov8/: main.cxx
my_ai_inference_exercise/include/: model.hxx
my_ai_inference_exercise/source/: engine.hxx  engine_ort.cxx  engine_trt.cxx  model_base.hxx  resnet50.cxx  yolov8.cxx
my_ai_inference_exercise/uml/: basic_structure.puml
